# fai

./: .gitattributes  .gitignore  AGENTS.md  Agents.md  CODE_OF_CONDUCT.md  Cargo.toml  Plan.md  README.md  Samples.md  cli.md  llms.txt  rust-toolchain.toml  rustfmt.toml
crates/fai-cli/: Cargo.toml
crates/fai-cli/benches/: test_loop.rs
crates/fai-cli/src/: cli.rs  lib.rs  main.rs
crates/fai-cli/tests/: check.rs  daemon.rs  lsp.rs  run.rs  test.rs
crates/fai-codegen/: Cargo.toml
crates/fai-codegen/proptest-regressions/: proptests.txt
crates/fai-codegen/src/: aot.rs  emit.rs  jit.rs  lib.rs  proptests.rs  reuse_tests.rs  tests.rs
crates/fai-contracts/: Cargo.toml
crates/fai-contracts/src/: arb.rs  lib.rs  run.rs  synth.rs
crates/fai-core/: Cargo.toml
crates/fai-core/src/: abi.rs  bounds.rs  fingerprint.rs  fuse.rs  helper_inline.rs  inline.rs  ir.rs  lib.rs  lit.rs  lower.rs  niche.rs  pretty.rs  proptests.rs  reassoc.rs  simplify.rs  tests.rs  wire.rs
crates/fai-corpus/: Cargo.toml
crates/fai-corpus/src/: lib.rs  realworld.rs  synthetic.rs
crates/fai-db/: Cargo.toml
crates/fai-db/src/: lib.rs
crates/fai-diagnostics/: Cargo.toml
crates/fai-diagnostics/src/: code.rs  diagnostic.rs  lib.rs  order.rs  render.rs  severity.rs  wire.rs
crates/fai-driver/: Cargo.toml  build.rs
crates/fai-driver/src/: backend.rs  build_tests.rs  cache.rs  command.rs  contracts.rs  lib.rs  manifest.rs  query.rs  session.rs
crates/fai-fmt/: Cargo.toml
crates/fai-fmt/src/: doc.rs  lib.rs
crates/fai-fmt/tests/: format.rs
crates/fai-fmt/tests/snapshots/: format__as_patterns.snap  format__basics.snap  format__classify.snap  format__comments.snap  format__hello.snap  format__locals.snap  format__messy.snap  format__multiline_if.snap  format__nested_modules.snap  format__pipes.snap  format__records.snap  format__tuples.snap  format__union_and_match.snap
crates/fai-ide/: Cargo.toml
crates/fai-ide/src/: code_action.rs  completion.rs  highlight.rs  lib.rs  query.rs  repr.rs  target.rs
crates/fai-ide/tests/: code_action.rs  completion.rs  highlight.rs  queries.rs
crates/fai-ide/tests/snapshots/: queries__api_A.snap  queries__callees_B_four.snap  queries__callers_A_inc.snap  queries__def_A_inc.snap  queries__definition_at_Red.snap  queries__dependents_A_inc.snap  queries__document_symbols_P.snap  queries__hover_at_tag.snap  queries__outline_A.snap  queries__references_at_A_inc.snap  queries__refs_A_inc.snap  queries__symbols.snap  queries__type_A_twice.snap  queries__workspace_symbols_two.snap
crates/fai-lsp/: Cargo.toml
crates/fai-lsp/src/: lib.rs  position.rs
crates/fai-lsp/tests/: completion_scenarios.rs  diagnostics_scenarios.rs  editing_scenarios.rs  highlight_format_scenarios.rs  hover_scenarios.rs  navigation_scenarios.rs  refactor_scenarios.rs  server.rs  symbols_signature_scenarios.rs
crates/fai-lsp/tests/harness/: mod.rs
crates/fai-rc/: Cargo.toml
crates/fai-rc/proptest-regressions/: proptests.txt
crates/fai-rc/src/: borrow.rs  bounds_sig.rs  cases.rs  escape.rs  forward.rs  length.rs  lib.rs  mutual.rs  proptests.rs  purity.rs  reuse_sig.rs  sroa.rs  tests.rs  trmc.rs  verify.rs
crates/fai-resolve/: Cargo.toml
crates/fai-resolve/src/: bodies.rs  decls.rs  ids.rs  intrinsics.rs  lib.rs  module.rs  prelude.rs  scc.rs  tests.rs
crates/fai-runtime/: Cargo.toml
crates/fai-runtime/fuzz/: Cargo.toml
crates/fai-runtime/fuzz/fuzz_targets/: free_list.rs
crates/fai-runtime/src/: alloc_tests.rs  array_tests.rs  hash_tests.rs  io.rs  lib.rs  proptests.rs  reactor.rs  reuse_tests.rs  scalar_tests.rs  scheduler.rs  string_tests.rs  tests.rs  tls.rs
crates/fai-server/: Cargo.toml
crates/fai-server/src/: client.rs  lib.rs  protocol.rs  server.rs  tap.rs  transport.rs
crates/fai-server/tests/: proptest.rs
crates/fai-span/: Cargo.toml
crates/fai-span/src/: lib.rs  line.rs  resolver.rs  source_map.rs  span.rs
crates/fai-syntax/: Cargo.toml
crates/fai-syntax/src/: ast.rs  attach.rs  layout.rs  lexer.rs  lib.rs  parser.rs  query.rs  symbol.rs  token.rs
crates/fai-syntax/src/snapshots/: fai_syntax__layout__tests__binding_block.snap  fai_syntax__layout__tests__bracketed_list.snap  fai_syntax__layout__tests__if_else_chain.snap  fai_syntax__layout__tests__local_lets.snap  fai_syntax__layout__tests__multiline_then_else.snap  fai_syntax__layout__tests__pipe_chain.snap  fai_syntax__lexer__tests__function_definition.snap  fai_syntax__lexer__tests__signature_and_contract.snap  fai_syntax__lexer__tests__trivia_and_literals.snap  fai_syntax__parser__tests__contract_group.snap  fai_syntax__parser__tests__function_with_pipes.snap  fai_syntax__parser__tests__if_else_chain.snap  fai_syntax__parser__tests__local_bindings.snap  fai_syntax__parser__tests__recovery.snap  (+1 more)
crates/fai-tests/: Cargo.toml
crates/fai-tests/benches/: algorithms_aot.rs  algorithms_jit.rs  algorithms_mem.rs  codegen.rs  concurrency.rs  contracts.rs  daemon.rs  data_layer.rs  inference.rs  interfaces.rs  lsp.rs  lsp_scenarios.rs  micro.rs  reuse.rs  stress.rs
crates/fai-tests/ocaml/: baseline.ml
crates/fai-tests/src/: algorithms.rs  bench_summary.rs  checker.rs  corpus.rs  lib.rs  ocaml.rs
crates/fai-tests/tests/: algorithms.rs  arrays.rs  backend_incremental.rs  bundle.rs  catalog.rs  cli.rs  concurrency.rs  contracts.rs  corpus.rs  cross_module.rs  diagnostics.rs  fixtures.rs  fusion.rs  hash_containers.rs  http.rs  incremental.rs  local_inference.rs  native.rs  net.rs  niche.rs  parse_queries.rs  perf_guards.rs  persistent_cache.rs  properties.proptest-regressions  properties.rs  real_world.rs  real_world_locals.rs  resolve_queries.rs  reuse.rs  samples.rs  session_concurrency.rs  session_sync.rs  sroa.rs  std_lib.rs  std_stack_safety.rs  store_app.rs  type_queries.rs  wbt.rs  web.rs
crates/fai-types/: Cargo.toml  build.rs
crates/fai-types/proptest-regressions/: prop_tests.txt
crates/fai-types/src/: Prelude.fai  contracts.rs  edge_tests.rs  evidence.rs  exhaustive.rs  lib.rs  lower.rs  perf.rs  prelude.rs  prop_tests.rs  query.rs  std_lib.rs  tests.rs  ty.rs
(+234 files in other folders)
