[workspace]
resolver = "3"
members = [
    "crates/fai-span",
    "crates/fai-diagnostics",
    "crates/fai-db",
    "crates/fai-syntax",
    "crates/fai-fmt",
    "crates/fai-resolve",
    "crates/fai-types",
    "crates/fai-ide",
    "crates/fai-driver",
    "crates/fai-cli",
    "crates/fai-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false
license = "MIT OR Apache-2.0"

# Centralized dependency versions. Concrete versions are pinned by the committed
# Cargo.lock; these caret ranges allow compatible updates. (docs/PLAN.md M0.)
[workspace.dependencies]
# Incremental query engine (wrapped behind fai-db; decision Q11/R11).
salsa = "0.26"
# Serialization for the stable JSON wire schema.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CLI argument parsing.
clap = { version = "4", features = ["derive"] }
# Deterministic, fast hashing for internal maps (Agents.md §8).
rustc-hash = "2"
# String interning for identifiers (the non-salsa `Symbol`).
lasso = { version = "0.7", features = ["multi-threaded"] }
# UTF-8 paths (clean JSON, no lossy conversion).
camino = "1"
# Typed library errors.
thiserror = "2"
# Logging spine (also a salsa dependency).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Snapshot testing.
insta = "1"
# Property-based (generative) testing.
proptest = "1"
# Microbenchmark harness (lean; throughput counters). Wall-clock benches are for
# local profiling — CI gates performance via the deterministic guard tests.
divan = "0.1"

# Internal crates (path deps, versions inherited from the workspace).
fai-span = { path = "crates/fai-span" }
fai-diagnostics = { path = "crates/fai-diagnostics" }
fai-db = { path = "crates/fai-db" }
fai-syntax = { path = "crates/fai-syntax" }
fai-fmt = { path = "crates/fai-fmt" }
fai-resolve = { path = "crates/fai-resolve" }
fai-types = { path = "crates/fai-types" }
fai-ide = { path = "crates/fai-ide" }
fai-driver = { path = "crates/fai-driver" }
fai-cli = { path = "crates/fai-cli" }

# Lints denied workspace-wide (decision Q3: "deny in table, hard everywhere").
# Inherited by each crate via `[lints] workspace = true`. `deny` (not `forbid`)
# so crates that need salsa-generated `unsafe impl` can scope an override.
[workspace.lints.rust]
warnings = { level = "deny", priority = -1 }
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
