[workspace]
resolver = "3"
members = [
    "crates/fai-span",
    "crates/fai-diagnostics",
    "crates/fai-db",
    "crates/fai-syntax",
    "crates/fai-fmt",
    "crates/fai-resolve",
    "crates/fai-types",
    "crates/fai-ide",
    "crates/fai-core",
    "crates/fai-rc",
    "crates/fai-codegen",
    "crates/fai-runtime",
    "crates/fai-contracts",
    "crates/fai-driver",
    "crates/fai-server",
    "crates/fai-lsp",
    "crates/fai-cli",
    "crates/fai-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false
license = "MIT OR Apache-2.0"

# Centralized dependency versions. Concrete versions are pinned by the committed
# Cargo.lock; these caret ranges allow compatible updates. (See docs/MEMORY.md.)
[workspace.dependencies]
# Incremental query engine (wrapped behind fai-db; decision Q11/R11).
salsa = "0.26"
# Serialization for the stable JSON wire schema.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CLI argument parsing.
clap = { version = "4", features = ["derive"] }
# Deterministic, fast hashing for internal maps (AGENTS.md §8).
rustc-hash = "2"
# Data parallelism (work-stealing pool) for per-definition codegen/lowering.
rayon = "1"
# Content hashing for the on-disk artifact cache and file-state sync.
blake3 = "1"
# String interning for identifiers (the non-salsa `Symbol`).
lasso = { version = "0.7", features = ["multi-threaded"] }
# UTF-8 paths (clean JSON, no lossy conversion). `serde1` for wire params.
camino = { version = "1", features = ["serde1"] }
# MessagePack encoding for the client<->daemon JSON-RPC wire.
rmp-serde = "1"
# Language Server Protocol: synchronous framing/connection + the LSP type surface.
lsp-server = "0.7"
# 0.95 keeps `Url` with `to_file_path`/`from_file_path`; 0.97 swapped to a `Uri`
# type without filesystem-path helpers.
lsp-types = "0.95"
# Cross-platform local IPC (unix sockets / Windows named pipes), safe API.
interprocess = "2"
# Unix process control: setsid (daemon detachment), kill, setrlimit.
nix = { version = "0.29", features = ["process", "signal", "resource"] }
# Bounded child wait, for enforcing the run worker's timeout.
wait-timeout = "0.2"
# Typed library errors.
thiserror = "2"
# Logging spine (also a salsa dependency).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Snapshot testing.
insta = "1"
# Property-based (generative) testing.
proptest = "1"
# Readable multi-line string literals in tests (strips common indentation).
indoc = "2"
# Microbenchmark harness (lean; throughput counters). Wall-clock benches are for
# local profiling — CI gates performance via the deterministic guard tests.
divan = "0.1"
# Native code generation backend (M3): Cranelift, plus object emission and the
# target triple. Pinned together; JIT and AOT share one codegen path.
cranelift-codegen = "0.132"
cranelift-frontend = "0.132"
cranelift-module = "0.132"
cranelift-jit = "0.132"
cranelift-object = "0.132"
cranelift-native = "0.132"
target-lexicon = "0.13"
object = "0.39"

# Internal crates (path deps, versions inherited from the workspace).
fai-span = { path = "crates/fai-span" }
fai-diagnostics = { path = "crates/fai-diagnostics" }
fai-db = { path = "crates/fai-db" }
fai-syntax = { path = "crates/fai-syntax" }
fai-fmt = { path = "crates/fai-fmt" }
fai-resolve = { path = "crates/fai-resolve" }
fai-types = { path = "crates/fai-types" }
fai-ide = { path = "crates/fai-ide" }
fai-core = { path = "crates/fai-core" }
fai-rc = { path = "crates/fai-rc" }
fai-codegen = { path = "crates/fai-codegen" }
fai-runtime = { path = "crates/fai-runtime" }
fai-contracts = { path = "crates/fai-contracts" }
fai-driver = { path = "crates/fai-driver" }
fai-server = { path = "crates/fai-server" }
fai-lsp = { path = "crates/fai-lsp" }
fai-cli = { path = "crates/fai-cli" }

# Lints denied workspace-wide (decision Q3: "deny in table, hard everywhere").
# Inherited by each crate via `[lints] workspace = true`. `deny` (not `forbid`)
# so crates that need salsa-generated `unsafe impl` can scope an override.
[workspace.lints.rust]
warnings = { level = "deny", priority = -1 }
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
