[package]
name = "fai-cli"
description = "The `fai` command-line client: argument parsing, output formatting, and dispatch."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "fai"
path = "src/main.rs"

[dependencies]
fai-span.workspace = true
fai-driver.workspace = true
fai-server.workspace = true
clap = { workspace = true }
serde_json.workspace = true
camino.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
indoc.workspace = true

[lints]
workspace = true
