[package]
name = "fai-contracts"
description = "Collecting, synthesizing, and running example/forall contracts (property testing)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true

[dependencies]
fai-span.workspace = true
fai-diagnostics.workspace = true
fai-db.workspace = true
fai-syntax.workspace = true
fai-resolve.workspace = true
fai-types.workspace = true
fai-core.workspace = true
fai-runtime.workspace = true
rustc-hash.workspace = true

[lints]
workspace = true
