[package]
name = "fai-driver"
description = "Command orchestration: sessions, result envelopes, and the command entry points."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
fai-span.workspace = true
fai-diagnostics.workspace = true
fai-db.workspace = true
fai-syntax.workspace = true
fai-fmt.workspace = true
fai-resolve.workspace = true
fai-types.workspace = true
fai-ide.workspace = true
fai-core.workspace = true
fai-rc.workspace = true
fai-codegen.workspace = true
salsa.workspace = true
rustc-hash.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
camino.workspace = true
blake3.workspace = true
target-lexicon.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
indoc.workspace = true

[lints]
workspace = true
