[package]
name = "fai-driver"
description = "Command orchestration: sessions, result envelopes, and the command entry points."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
fai-span.workspace = true
fai-diagnostics.workspace = true
fai-db.workspace = true
fai-syntax.workspace = true
fai-fmt.workspace = true
fai-resolve.workspace = true
fai-types.workspace = true
fai-ide.workspace = true
fai-core.workspace = true
fai-rc.workspace = true
fai-codegen.workspace = true
fai-runtime.workspace = true
fai-contracts.workspace = true
salsa.workspace = true
rustc-hash.workspace = true
rayon.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
camino.workspace = true
blake3.workspace = true
target-lexicon.workspace = true
wait-timeout.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
# Job-Object resource limits for the run/test worker (the peer of the `nix`
# setrlimit path): a per-process committed-memory cap and user-mode CPU-time limit.
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
indoc.workspace = true

[lints]
workspace = true
