[package]
name = "fai-ide"
description = "Code intelligence powering `fai query` and the LSP for Fai."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
fai-span.workspace = true
fai-diagnostics.workspace = true
fai-db.workspace = true
fai-syntax.workspace = true
fai-resolve.workspace = true
fai-types.workspace = true
serde = { workspace = true }

[dev-dependencies]
indoc.workspace = true
insta.workspace = true
serde_json.workspace = true

[lints]
workspace = true
