[package]
name = "fai-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true

[dependencies]
fai-db.workspace = true
fai-driver.workspace = true
fai-ide.workspace = true
fai-diagnostics.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
tracing.workspace = true

[dev-dependencies]
indoc.workspace = true

[lints]
workspace = true
