[package]
name = "fai-resolve"
description = "Name resolution, module graph, and visibility for Fai."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
fai-span.workspace = true
fai-diagnostics.workspace = true
fai-db.workspace = true
fai-syntax.workspace = true
# salsa's `tracked`/`Update` macros resolve `salsa::` from the crate root, so a
# query-defining crate needs salsa as a direct dependency (see `docs/MEMORY.md`).
salsa.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
indoc.workspace = true
insta.workspace = true

[lints]
workspace = true
