[package]
name = "fai-runtime"
description = "The Fai native runtime: tagged values, reference counting, closures, primitives, and capability hosts."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true

# Built as a static archive (embedded and linked into AOT executables) and as an
# rlib (linked into the compiler so the JIT can resolve runtime symbols by
# address). The runtime's M:N concurrency scheduler needs a few native crates
# (stackful coroutines, work-stealing deques, the IO reactor), so the archive is
# built by a nested `cargo` invocation (see fai-driver/build.rs) rather than a
# single `$RUSTC`; a `staticlib` bundles those dependencies into the one archive.
[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
# The M:N green-thread scheduler that runs a compiled program's concurrent tasks.
corosensei.workspace = true
crossbeam-deque.workspace = true
# Cross-platform non-blocking I/O readiness for the network reactor (TCP/UDP).
mio.workspace = true

# Exposes the allocator fuzz harness (`run_ops`) for the out-of-workspace
# cargo-fuzz target. Off by default and dependency-free, so the staticlib/rlib and
# the single-`$RUSTC` archive build are unaffected.
[features]
fuzzing = []

# Dev-only; not part of the staticlib/rlib, so the runtime stays dependency-free
# for the single-`$RUSTC` archive build.
[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
