[package]
name = "fai-server"
description = "The per-workspace daemon and its thin-client transport (MessagePack JSON-RPC)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
fai-driver.workspace = true
serde = { workspace = true }
serde_json.workspace = true
rmp-serde.workspace = true
blake3.workspace = true
interprocess.workspace = true
camino.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[lints]
workspace = true
