[package]
name = "fai-server"
description = "The per-workspace daemon and its thin-client transport (MessagePack JSON-RPC)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
fai-driver.workspace = true
serde = { workspace = true }
serde_json.workspace = true
rmp-serde.workspace = true
blake3.workspace = true
interprocess.workspace = true
camino.workspace = true
thiserror.workspace = true
tracing.workspace = true
wait-timeout.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
# Clear the inheritable flag on the client's std handles before spawning the
# detached daemon, so it does not inherit (and hold open) the client's stdio pipes.
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_System_Console"] }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
