[package]
name = "fai-span"
description = "Source identifiers, byte spans, source maps, and line/column mapping for Fai."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
camino.workspace = true

[lints]
workspace = true
