[package]
name = "fai-syntax"
description = "Lexer, layout, parser, AST, and item tree for the Fai surface syntax."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
fai-span.workspace = true
fai-diagnostics.workspace = true
lasso.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
