[package]
name = "fai-syntax"
description = "Lexer, layout, parser, AST, and item tree for the Fai surface syntax."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
fai-span.workspace = true
fai-diagnostics.workspace = true
fai-db.workspace = true
# salsa's `tracked`/`Update` macros resolve `salsa::` from the crate root, so a
# query-defining crate needs salsa as a direct dependency (see `docs/PLAN.md`).
salsa.workspace = true
lasso.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true

[lints]
workspace = true
